test/files/neg/t7369.check
t7369.scala:7: warning: unreachable code
    case Tuple1(X) => // unreachable
                   ^
t7369.scala:14: warning: unreachable code
    case Tuple1(true) => // unreachable
                      ^
t7369.scala:32: warning: unreachable code
    case Tuple1(X) => // unreachable
                   ^
t7369.scala:41: warning: unreachable code
    case Tuple1(null) => // unreachable
                      ^
error: No warnings can be incurred under -Xfatal-warnings.
four warnings found
one error found
